main.tf
terraform {
  backend "s3" {
    bucket  = "terraform-state-management-ringberg"
    key     = "state/terraform.tfstate"
    region  = "us-east-1"
    encrypt = true
  }
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.27"
    }
  }
  required_version = ">= 0.14.9"
}
provider "aws" {
  profile = "default"
  region  = "us-east-1"
}

data "aws_route53_zone" "public" {
  name         = var.demo_dns_zone
  private_zone = false
  provider     = aws.account_route53
}

resource "aws_s3_bucket" "terraform-state" {
  bucket = "terraform-state-management-ringberg"
  versioning {
    enabled = true
  }

  server_side_encryption_configuration {
    rule {
      apply_server_side_encryption_by_default {
        sse_algorithm = "AES256"
      }
    }
  }
}

resource "aws_acm_certificate" "ssl-cert" {
  domain_name       = aws_route53_record.dns-record.fqdn
  validation_method = "DNS"
  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_route53_record" "dns-record" {
  allow_overwrite = true
  name            = tolist(aws_acm_certificate.ssl-cert.domain_validation_options)[0].resource_record_name
  records         = [tolist(aws_acm_certificate.ssl-cert.domain_validation_options)[0].resource_record_value]
  type            = tolist(aws_acm_certificate.ssl-cert.domain_validation_options)[0].resource_record_type
  zone_id         = data.aws_route53_zome.public.id
  ttl             = 60
  provider        = aws.account_route53
}

resource "aws_acm_certificate_validation" "cert" {
  certificate_arn         = aws_acm_certificate.ssl-cert.arn
  validation_record_fqdns = [aws_route53_record.dns-record.fqdn]
}

resource "aws_s3_bucket_public_access_block" "block" {
  bucket = aws_s3_bucket.terraform-state.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_instance" "todo-app-server" {
  ami                         = "ami-0c02fb55956c7d316"
  instance_type               = "t2.micro"
  key_name                    = "TodoAppServerKey"
  associate_public_ip_address = true
  security_groups             = [aws_security_group.todo-app-server-sg.id]
  subnet_id                   = aws_subnet.main-subnet.id
  user_data                   = <<-EOF
    #!/bin/bash
    set -ex
    sudo yum update -y
    sudo amazon-linux-extras install docker -y
    sudo service docker start
    sudo usermod -a -G docker ec2-user
    sudo curl -L https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
    sudo chmod +x /usr/local/bin/docker-compose
    sudo docker run -d -p 8080:8080 ringberg/todo-app-spring:latest
  EOF

  tags = {
    "Name" = "TodoAppServer"
  }
}

resource "aws_security_group" "todo-app-server-sg" {
  name        = "todo-app-server-sg"
  description = "Allow ssh for inbound traffic"
  vpc_id      = aws_vpc.main-vpc.id

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    protocol    = "tcp"
    to_port     = 443
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 8080
    protocol    = "tcp"
    to_port     = 8080
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    protocol    = "tcp"
    to_port     = 443
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 8080
    protocol    = "tcp"
    to_port     = 8080
  }
}

resource "aws_vpc" "main-vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "Main VPC"
  }
}

resource "aws_subnet" "main-subnet" {
  cidr_block        = cidrsubnet(aws_vpc.main-vpc.cidr_block, 3, 1)
  vpc_id            = aws_vpc.main-vpc.id
  availability_zone = "us-east-1a"
}

resource "aws_eip" "todo-app-server-ip" {
  instance = aws_instance.todo-app-server.id
  vpc      = true
}

resource "aws_internet_gateway" "main-gateway" {
  vpc_id = aws_vpc.main-vpc.id
  tags = {
    Name = "Main Gateway"
  }
}

resource "aws_route_table" "main-route-table" {
  vpc_id = aws_vpc.main-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-gateway.id
  }

  tags = {
    Name = "Main Route Table"
  }
}

resource "aws_route_table_association" "main-route-table-association" {
  subnet_id      = aws_subnet.main-subnet.id
  route_table_id = aws_route_table.main-route-table.id
}
